feat: update routes into public and protected
