# routes/routes.go
@@ -13,6 +13,18 @@ import (
 )
 
 func InitRoutes(e *echo.Echo, db *gorm.DB) {
+	authRepo := repositories.NewAuthRepository(db)
+	authService := services.NewAuthService(authRepo)
+	authController := controllers.NewAuthController(authService)
+
+	clientRepo := repositories.NewClientRepository(db)
+	clientService := services.NewClientService(clientRepo)
+	clientController := controllers.NewClientController(clientService)
+
+	invoiceRepo := repositories.NewInvoiceRepository(db)
+	invoiceService := services.NewInvoiceService(invoiceRepo, clientRepo, authRepo)
+	invoiceController := controllers.NewInvoiceController(invoiceService)
+
 	// Routes for Health Check and Welcome Message
 	e.GET("/", func(c echo.Context) error {
 		return utils.Response(c, 200, "Welcome to Invoice Generator API", nil)
@@ -20,25 +32,26 @@ func InitRoutes(e *echo.Echo, db *gorm.DB) {
 	e.GET("/health", func(c echo.Context) error {
 		return utils.Response(c, 200, "Invoice Generator API is running", nil)
 	})
+	e.GET("/swagger/*", echoSwagger.WrapHandler)
 
 	// These routes are grouped under the "/v1" path
-	e.Group("/v1")
+	v1 := e.Group("/v1")
+	public := v1.Group("/public")
 
-	// Authentication Routes
-	authRepo := repositories.NewAuthRepository(db)
-	authService := services.NewAuthService(authRepo)
-	authController := controllers.NewAuthController(authService)
-	e.POST("/v1/auth/sign-up", authController.SignUp)
-	e.POST("/v1/auth/sign-in", authController.SignIn)
+	// Public Routes
+	authRoutes := public.Group("/auth")
+	authRoutes.POST("/sign-up", authController.SignUp)
+	authRoutes.POST("/sign-in", authController.SignIn)
 
-	protected := e.Group("/v1")
+	publicInvoiceRoutes := public.Group("/invoices")
+	publicInvoiceRoutes.GET("/:id/pdf", invoiceController.DownloadInvoicePDF)
+	publicInvoiceRoutes.POST("/generate-pdf", invoiceController.GeneratePublicInvoice)
+
+	protected := v1.Group("/protected")
 	protected.Use(middleware.JWTMiddleware)
 	protected.GET("/me", authController.Me)
 
 	clientRoutes := protected.Group("/clients")
-	clientRepo := repositories.NewClientRepository(db)
-	clientService := services.NewClientService(clientRepo)
-	clientController := controllers.NewClientController(clientService)
 	clientRoutes.POST("", clientController.CreateClient)
 	clientRoutes.GET("", clientController.GetAllClients)
 	clientRoutes.GET("/:id", clientController.GetClientByID)
@@ -46,14 +59,8 @@ func InitRoutes(e *echo.Echo, db *gorm.DB) {
 	clientRoutes.DELETE("/:id", clientController.DeleteClient)
 
 	invoiceRoutes := protected.Group("/invoices")
-	invoiceRepo := repositories.NewInvoiceRepository(db)
-	invoiceService := services.NewInvoiceService(invoiceRepo, clientRepo, authRepo)
-	invoiceController := controllers.NewInvoiceController(invoiceService)
 	invoiceRoutes.POST("", invoiceController.CreateInvoice)
 	invoiceRoutes.GET("/:id", invoiceController.GetInvoiceByID)
 	invoiceRoutes.PATCH("/:id", invoiceController.UpdateInvoice)
 	invoiceRoutes.GET("", invoiceController.ListInvoicesByUserID)
-
-	e.GET("/v1/invoices/:id/pdf", invoiceController.DownloadInvoicePDF)
-	e.GET("/swagger/*", echoSwagger.WrapHandler)
 }
